--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
+    <link rel="stylesheet" href="./css/meanmenu.css">
     <link rel="stylesheet" href="./css/all.min.css">
     <link rel="stylesheet" href="./css/fontawesome.min.css">
     <link rel="stylesheet" href="./css//bxslider.min.css">
     <link rel="stylesheet" href="./style.css">
+     <link rel="stylesheet" href="./css/responsiv.css">
 </head>
 <body>
+    <div id="mobile_menu"></div>
+
     <header class="header_area">
         <div id="top_header_area" >
              <div class="inner_top_area">
@@ -266,10 +269,9 @@
         </div>
     </section>
 
-
-
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
      <script src="./js/jquery.bxslider.min.js"></script>
+     <script src="./js/jquery.meanmenu.js"></script>
      <script src="./js/main.js"></script>
 </body>
 </html>
