--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                          </ul>
                      </div>
                      <div class="search_area">
-                         <form action="">
+                         <form action="./form.php">
                              <input type="text" placeholder="Search Here">
                              <input type="submit" value="">
                          </form>
@@ -247,18 +247,18 @@
 
             <div class="child_footer">
                 <h3>CONTACT US</h3>
-                    <form action="">
+                    <form action="./form.php">
                         <input type="text" placeholder="Name">
                         <input type="email" placeholder="Email">
                         <textarea placeholder="Massage"></textarea>
-                        <input type="submit" placeholder="Submit">
+                        <input type="submit">
                     </form>
                   
               
             </div>
         </div>
     </footer>
-    <section id="copyright_area">
+    <div id="copyright_area">
         <div class="inner_copyright container">
             <div class="left_copyright">
               <p>Copyright © 2013 Domain Name - All Rights Reserved</p>
@@ -267,7 +267,7 @@
               <p>Template by OS Templates</p>
             </div>
         </div>
-    </section>
+    </div>
 
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
      <script src="./js/jquery.bxslider.min.js"></script>
